--- a/assets/styles/about.css
+++ b/assets/styles/about.css
@@ -1,19 +1,310 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+
 @font-face {
-    font-family: "formula-bold";
-    src: url("../font/formula1-bold.ttf") format("truetype");
-  }
-  
-  @font-face {
-    font-family: "formula-reg";
-    src: url("../font/f1reg.otf") format("truetype");
-  }
-  
-  @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap");
-  
-  * {
-    margin: 0;
-    padding: 0;
-  }
+  font-family: "formula-bold";
+  src: url("../font/formula1-bold.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "formula-reg";
+  src: url("../font/f1reg.otf") format("truetype");
+}
+
+/* @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"); */
+/* @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap"); */
+
+* {
+  margin: 0;
+  padding: 0;
+}
 body {
   background: #0a0a0a;
+}
+#about {
+  position: relative;
+}
+/* about-title */
+.about-title {
+  width: 100vw;
+  max-width: 100%;
+  height: 198.05px;
+  border: 2px solid red;
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+  justify-content: center;
+}
+.title-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
+}
+.title1 {
+  color: #232323;
+  text-align: center;
+  font-family: formula-bold;
+  font-size: 62px;
+  font-style: normal;
+  font-weight: 500;
+  margin-bottom: -2.5rem;
+}
+#main-title {
+  color: #fff;
+  text-align: center;
+  font-family: formula-bold;
+  font-size: 7.75rem;
+  font-weight: 400;
+}
+.title2 {
+  color: #232323;
+  text-align: center;
+  font-family: formula-bold;
+  font-size: 2.625rem;
+  font-weight: 500;
+  margin-top: -2rem;
+}
+.slash {
+  width: 82px;
+  height: 142px;
+  z-index: 10;
+  border: 2px solid white;
+}
+.slash-2,
+.slash-4 {
+  margin-left: -43px;
+}
+.slash-2 {
+  margin-right: 1rem;
+}
+.slash-3 {
+  margin-left: 1rem;
+}
+#about-hero {
+  position: relative;
+  height: 1483px;
+  border: 2px solid blue;
+}
+/* hero-right-container */
+.hero-right-container {
+  position: absolute;
+  right: 82px;
+  width: 1187px;
+  border: 2px solid red;
+  height: 268px;
+  margin-top: 113px;
+}
+.hero-right-content {
+  width: 937px;
+  height: 145px;
+  border: 2px solid white;
+}
+.hero-right-content > p {
+  color: #fff;
+  font-family: Montserrat;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.hero-r-p1 {
+  padding-bottom: 1.9rem;
+}
+.hero-right-border {
+  width: 100%;
+  background-color: #d21717;
+}
+.rborder-1 {
+  margin-top: 53px;
+  height: 8px;
+}
+.rborder-2 {
+  height: 3px;
+}
+.rborder-3 {
+  height: 8px;
+}
+.rborder-2,
+.rborder-3 {
+  margin-top: 20px;
+}
+/* vertical-title left */
+#about-vertical-title {
+  transform: rotate(90deg);
+  position: absolute;
+  margin-top: 486px;
+  margin-left: -304px;
+}
+.vertical-title-box > p {
+  color: #393939;
+  font-family: formula-bold;
+  font-size: 4.375rem;
+  font-weight: 500;
+  transform: scaleX(1.97);
+}
+.vertical-title-1 {
+  color: #212121;
+  font-family: formula-bold;
+  font-size: 7.8125rem;
+  font-weight: 500;
+  line-height: 125px;
+  transform: scaleX(2);
+}
+/* car */
+.hero-car {
+  width: 453.896px;
+  height: 185.559px;
+  position: absolute;
+  top: calc(10%);
+  left: calc(-4%);
+  z-index: 10;
+}
+/* car front-text */
+.car-front-text {
+  transform: rotate(90deg);
+  position: absolute;
+  top: calc(11%);
+  left: calc(15%);
+}
+.carf-row1 {
+  display: flex;
+  align-items: flex-end;
+  gap: 0.5rem;
+  margin-bottom: -1.7rem;
+}
+.carf-text1 {
+  font-family: formula-bold;
+  font-size: 5.494rem;
+  font-weight: 500;
+  -webkit-text-stroke: 2px #d21717;
+}
+.carf-text2 {
+  color: #e3e3e3;
+  font-family: formula-bold;
+  font-size: 3.99rem;
+  font-weight: 500;
+  margin-bottom: 0.5rem;
+}
+.carf-text3 {
+  color: #e3e3e3;
+  font-family: formula-bold;
+  font-size: 4.76rem;
+  font-weight: 500;
+}
+/* core value section */
+#corevalue-section {
+  position: absolute;
+  top: 35%;
+  left: 22%;
+  height: 856px;
+  min-width: 1222px;
+  border: 2px solid red;
+}
+.core-title {
+  display: flex;
+  justify-content: space-between;
+}
+.core-title > p {
+  text-align: center;
+  font-family: formula-bold;
+  font-size: 8rem;
+  font-weight: 500;
+  -webkit-text-stroke: 2px #2beae2;
+}
+.core-title-1 {
+  width: 400px;
+}
+.core-title-2 {
+  width: 582px;
+  padding-right: 5.5rem;
+}
+/* core  1 2 3 */
+.core-trophy {
+  display: flex;
+}
+.core-2 {
+  height: 526.42px;
+  width: 283px;
+  border: 2px solid blue;
+  display: flex;
+  flex-direction: column;
+  /* align-items:center ; */
+}
+.coreblock2 {
+  position: relative;
+  display: flex;
+  /* justify-content: center; */
+}
+.core-value-2 {
+  font-family: formula-bold;
+  font-size: 14.25rem;
+  font-weight: 500;
+  -webkit-text-stroke: 2px #d21717;
+}
+.trophy2 {
+  width: 188px;
+  height: 270.323px;
+  position: absolute;
+  left: 10%;
+}
+.core-2-title {
+  width: 257px;
+}
+.core-2-title > p {
+  color: #2beae2;
+  text-align: center;
+  font-family: formula-reg;
+  font-size: 28px;
+  font-weight: 400;
+}
+.core-border {
+  width: 57.5px;
+  height: 8px;
+  background-color: #fcfcfc;
+  margin: 1.625rem auto;
+}
+.core-description > p {
+  color: #989494;
+  font-family: Poppins;
+  font-size: 20px;
+  font-weight: 500;
+  text-align: center;
+}
+.coreblock1 {
+  position: relative;
+  display: flex;
+  /* justify-content: center; */
+}
+.core-1 {
+  height: 814px;
+  width: 283px;
+  border: 2px solid green;
+  /* position: absolute;
+  top: 13%; */
+}
+
+.trophy1 {
+  width: 299px;
+  height: 448px;
+  position: absolute;
+  left: 10%;
+}
+.core-value-1 {
+  font-family: formula-bold;
+  font-size: 18rem;
+  font-weight: 500;
+  -webkit-text-stroke: 2px #d21717;
+  margin-top: 120px;
+}
+.core-1-title > p {
+  color: #2beae2;
+  text-align: center;
+  font-family: formula-reg;
+  font-size: 1.75rem;
+  font-weight: 400;
+}
+.core-1-desp2{
+  margin-top: 2.375rem;
 }
